--- a/build.gradle
+++ b/build.gradle
@@ -5,11 +5,14 @@ plugins {
 group 'com.apakhomov.groovy.experimental'
 version '1.0-SNAPSHOT'
 
-repositories {
-    mavenCentral()
-}
+subprojects {
+    apply plugin: 'groovy'
+    
+    repositories {
+        mavenCentral()
+    }
 
-dependencies {
-    compile 'org.codehaus.groovy:groovy-all:2.3.11'
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    dependencies {
+        compile 'org.codehaus.groovy:groovy-all:2.3.11'
+    }
 }
